[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/score.tres" type="DynamicFont" id=1]
[ext_resource path="res://Global.gd" type="Script" id=2]
[ext_resource path="res://audio/drop.wav" type="AudioStream" id=3]
[ext_resource path="res://table.tscn" type="PackedScene" id=4]
[ext_resource path="res://taco.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/ending.wav" type="AudioStream" id=6]

[node name="global" type="Node2D"]
script = ExtResource( 2 )

[node name="table" parent="." instance=ExtResource( 4 )]

[node name="label" type="Label" parent="."]
margin_left = 142.0
margin_right = 634.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hole" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="end" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 5.0
pitch_scale = 5.0

[node name="taco" parent="." instance=ExtResource( 5 )]

[node name="start_damp" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="inc_damp" type="Timer" parent="."]
wait_time = 0.25

[connection signal="finished" from="end" to="." method="_on_end_finished"]
[connection signal="timeout" from="start_damp" to="." method="_on_friction_timeout"]
[connection signal="timeout" from="inc_damp" to="." method="_on_inc_damp_timeout"]
